Added primary game stats page (only header)
