# app/ErtsWebApp/swagger.json
@@ -528,6 +528,14 @@
             "type": "string",
             "nullable": true
           },
+          "teamName": {
+            "type": "string",
+            "nullable": true
+          },
+          "teamImageUrl": {
+            "type": "string",
+            "nullable": true
+          },
           "firstBaron": {
             "type": "boolean"
           },
@@ -788,6 +796,10 @@
         "type": "object",
         "additionalProperties": false,
         "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int64"
+          },
           "startTime": {
             "type": "string",
             "format": "date-time"
